5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4346/executions/1577_1330.log
== TEST (2019-03-14 19:24:08) 
-- CODE:
print ( 41,6 )
-- OUTPUT:
41 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:24:11) 
-- CODE:
print ( 41,6 )
-- OUTPUT:
41 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:24:12) 
-- CODE:
print ( 41,6 )
-- EXECUTION TIME:
0.145815
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:24:31) 
-- CODE:
round ( 41,6 )
-- OUTPUT:
41 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:24:32) 
-- CODE:
round ( 41,6 )
-- EXECUTION TIME:
0.314982
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:24:48) 
-- CODE:
round ( 41,6 )
-- OUTPUT:
41 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:25:17) 
-- CODE:
round ( 41.6 )
print ( 41.5 
		
-- ERROR:
File "XXXX", line 4
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:25:18) 
-- CODE:
round ( 41.6 )
print ( 41.5 
		
-- EXECUTION TIME:
0.120776
-- ERROR:
  File "/home/codebench/codes/1577/1330/main.py", line 4
    
      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:25:18) 
-- CODE:
round ( 41.6 )
print ( 41.5 
		
-- ERROR:
File "XXXX", line 4
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:25:19) 
-- CODE:
round ( 41.6 )
print ( 41.5 
		
-- EXECUTION TIME:
0.136287
-- ERROR:
  File "/home/codebench/codes/1577/1330/main.py", line 4
    
      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:25:39) 
-- CODE:
round ( 41,6 )
print ( 41.5 )
		
-- OUTPUT:
41.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:25:40) 
-- CODE:
round ( 41,6 )
print ( 41.5 )
		
-- EXECUTION TIME:
0.150532
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:25:48) 
-- CODE:
round ( 41,66 )
print ( 41.5 )
		
-- OUTPUT:
41.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:25:49) 
-- CODE:
round ( 41,66 )
print ( 41.5 )
		
-- EXECUTION TIME:
0.137949
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:27:06) 
-- CODE:
round ( 41.66 )
print ( 41.5 )
		
-- OUTPUT:
41.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:27:12) 
-- CODE:
round ( 41.66 )
print ( 41.5 )
		
-- OUTPUT:
41.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:27:15) 
-- CODE:
round ( 41.66 )
print ( 41.5 )
		
-- EXECUTION TIME:
0.202037
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:27:30) 
-- CODE:
round ( 41.66 )
		
-- OUTPUT:
41.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:27:33) 
-- CODE:
round ( 41.66 )
		
-- OUTPUT:
41.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:27:36) 
-- CODE:
round ( 41.66 )
		
-- EXECUTION TIME:
0.157465
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:28:06) 
-- CODE:
print ( 250/6 )
		
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:30:23) 
-- CODE:
print (round(250/6,4))

		
-- OUTPUT:
41.6667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:30:27) 
-- CODE:
print (round(250/6,4))

		
-- EXECUTION TIME:
0.177087
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.6667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:30:36) 
-- CODE:
print (round(250/6,2))

		
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:30:38) 
-- CODE:
print (round(250/6,2))

		
-- EXECUTION TIME:
0.154583
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
